<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/speech"
        android:key="pref_speech">
        <net.jayschwa.android.preference.SliderPreference
            android:key="pref_pitch"
            android:title="@string/pitch_slider_title"
            android:summary="@array/pitch_slider_summaries"
            android:defaultValue="@string/pitch_slider_default"
            android:dialogMessage="@string/pitch_slider_message" />
        <net.jayschwa.android.preference.SliderPreference
            android:key="pref_speed"
            android:title="@string/speed_slider_title"
            android:summary="@array/speed_slider_summaries"
            android:defaultValue="@string/speed_slider_default"
            android:dialogMessage="@string/speed_slider_message" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/words"
        android:key="pref_words">
        <ListPreference
            android:title="@string/difficulty"
            android:key="pref_difficulty"
            android:entries="@array/difficultyEntries"
            android:entryValues="@array/difficultyEntryValues"
            android:defaultValue="Medium">
        </ListPreference>
    </PreferenceCategory>

</PreferenceScreen>